Update and rename index.html to storefront.html

--- a/storefront.html
+++ b/storefront.html
@@ -27,7 +27,7 @@
             <b>The links above will bring you to the websites where you can find these products.</b>
         </p>
         
-            <a href="index.html">Store Front</a>
+            <a href="storefront.html">Store Front</a>
             <a href="reflect.html">Reflection</a>
     
       </aside>
