--- a/reflect.html
+++ b/reflect.html
@@ -78,7 +78,7 @@
          </a>
 	  </section>
 
-	<footer>©2020 - &lt;Melvyn Reyes&gt; Part B <a href="file:///C:/Users/Melvy/OneDrive/Documents/School/YEAR-1/Sem2/WEB222/assignment5/assignment5-template/partB/storefront.html">link to store front</a></footer>
+	<footer>©2020 - &lt;Melvyn Reyes&gt; Part B <a href="https://mreyes28.github.io/storefront.html">link to store front</a></footer>
 
    </div>
 
