removed tags, fixed stray </li>tags, seperate <meta> tags

--- a/reflect.html
+++ b/reflect.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
+   <meta charset="UTF-8"/>
    <title>Final</title>
-   <style>
-   </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
    <link rel='stylesheet' href='css/sitecss.css' type='text/css' media='screen'>
 </head>
 <body>
@@ -26,8 +25,8 @@
             <br><br>
             <b>The links above will bring you to the websites where you can find these products.</b>
         </p>
-            <a href="storefront.html">Store Front</a></li>
-            <a href="reflect.html">Reflection</a></li>
+            <a href="storefront.html">Store Front</a>
+            <a href="reflect.html">Reflection</a>
       </aside>
       <section class="main">
           <h2> Reflection </h2>
