--- a/storefront.html
+++ b/storefront.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
+   <meta charset="UTF-8"/>
    <title>Final</title>
-   <style>
-   </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
    <link rel='stylesheet' href='css/sitecss.css' type='text/css' media='screen'>
 </head>
 <body>
